SWU-69 - Fixed the spacing of the IA headings

--- a/swinburne-aem-prototype/source/v2/scss/layout/_footer.scss
+++ b/swinburne-aem-prototype/source/v2/scss/layout/_footer.scss
@@ -136,6 +136,11 @@
         @include hover-focus {
           text-decoration: underline;
         }
+
+        @include media-breakpoint-up(md) {
+          display: inline-block;
+          margin-bottom: 2px;
+        }
       }
 
       @include media-breakpoint-up(md) {
